[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"
authors = ["miracle t"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.12"
thiserror = "1"
serde_json = "1.0.82"
serde ={ version = "1.0.139", features = ["derive"] }
sled = "0.34.7"
crossbeam = "0.8.1"
rayon = "1.5.3"
tokio = {version = "1.20.0",features = ["full" ]}
tokio-util = {version = "0.7.3",features = ["codec"]}
futures = "0.3" 
bytes = "1.1.0"